--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 
 env:
-  BUILD_TYPE: Release
+  BUILD_TYPE: Debug
 
 jobs:
   build:
@@ -29,11 +29,11 @@ jobs:
 
       - name: List build outputs
         run: |
-          dir "bin\Release-x64" -Recurse
+          dir "bin\Debug-x64" -Recurse
 
       - name: Smoke Test (Run Sandbox for a few seconds)
         run: |
-          Start-Process -FilePath .\bin\Release-x64\Sandbox\SandboxApp.exe
+          Start-Process -FilePath .\bin\Debug-x64\Sandbox\SandboxApp.exe
           Start-Sleep -Seconds 3
           Stop-Process -Name SandboxApp -ErrorAction Stop
 
