--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,10 @@ jobs:
 
       - name: Smoke Test (Run Sandbox for a few seconds)
         run: |
-          Start-Process -FilePath .\bin\Debug-x64\Sandbox\SandboxApp.exe
+          $p = Start-Process -FilePath .\bin\Debug-x64\Sandbox\SandboxApp.exe -PassThru
           Start-Sleep -Seconds 3
-          Stop-Process -Name SandboxApp -ErrorAction Stop
+          Stop-Process -Id $p.Id -ErrorAction Stop
+
 
 
   # test:
