--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build
         run: |
-          cmake --build build --parallel
+          cmake --build build --config ${{env.BUILD_TYPE}} --parallel
 
       - name: List build outputs
         run: |
