--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,20 +51,35 @@ FetchContent_Declare(
   GIT_TAG v0.1.36
 )
 
-# Configure GLAD before fetching
-set(GLAD_PROFILE "core" CACHE STRING "")
-set(GLAD_API "gl=4.6" CACHE STRING "")
-set(GLAD_GENERATOR "c" CACHE STRING "")
-set(GLAD_INSTALL OFF CACHE BOOL "" FORCE)
+# Dear ImGui (docking)
+FetchContent_Declare(
+  imgui
+  GIT_REPOSITORY https://github.com/ocornut/imgui.git
+  GIT_TAG docking
+)
 
-# Configure GLFW options before making it available
-set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
-set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
-set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
-set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(spdlog glfw glad imgui)
 
-# Make dependencies available
-FetchContent_MakeAvailable(spdlog glfw glad)
+# Create imgui library from sources
+set(IMGUI_DIR ${imgui_SOURCE_DIR})
+add_library(imgui STATIC
+    ${IMGUI_DIR}/imgui.cpp
+    ${IMGUI_DIR}/imgui_demo.cpp
+    ${IMGUI_DIR}/imgui_draw.cpp
+    ${IMGUI_DIR}/imgui_tables.cpp
+    ${IMGUI_DIR}/imgui_widgets.cpp
+    ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp
+    ${IMGUI_DIR}/backends/imgui_impl_opengl3.cpp
+)
+
+target_include_directories(imgui PUBLIC
+    ${IMGUI_DIR}
+    ${IMGUI_DIR}/backends
+)
+
+target_compile_definitions(imgui PUBLIC IMGUI_IMPL_OPENGL_LOADER_GLAD)
+
+target_link_libraries(imgui PUBLIC glfw)
 
 # Add subdirectories
 add_subdirectory(Pillar)
