--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,21 @@ FetchContent_Declare(
   GIT_TAG v0.1.36
 )
 
+# Configure GLAD before fetching
+set(GLAD_PROFILE "core" CACHE STRING "")
+set(GLAD_API "gl=4.6" CACHE STRING "")
+set(GLAD_GENERATOR "c" CACHE STRING "")
+set(GLAD_INSTALL OFF CACHE BOOL "" FORCE)
+
+# Configure GLFW options before making it available
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
+
+# Make dependencies available
+FetchContent_MakeAvailable(spdlog glfw glad)
+
 # Dear ImGui (docking)
 FetchContent_Declare(
   imgui
