--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -1,3 +1,5 @@
+# Added this line so i know where the fuck i am
+# This is sandbox cmake
 # ==============================
 # Sandbox Application (Executable)
 # ==============================
