--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,13 +19,8 @@ jobs:
       - name: Install Ninja
         uses: seanmiddleditch/gha-setup-ninja@v4
       
-      - name: Setup Mesa3D for Software OpenGL
-        run: |
-          # Download and install Mesa3D for software rendering
-          curl -L -o mesa.7z https://github.com/pal1000/mesa-dist-win/releases/download/23.2.1/mesa3d-23.2.1-release-msvc.7z
-          7z x mesa.7z -omesa
-          # Copy OpenGL32.dll to system (software renderer)
-          Copy-Item "mesa\x64\opengl32.dll" -Destination "$env:WINDIR\System32\" -Force
+      - name: Setup Mesa3D (Software OpenGL)
+        uses: ssciwr/setup-mesa-dist-win@v2
 
       - name: Configure CMake
         run: |
@@ -42,6 +37,9 @@ jobs:
       - name: Run Unit Tests
         run: |
           .\bin\Debug-x64\Tests\PillarTests.exe --gtest_output=xml:test-results.xml
+        env:
+          # Ensure Mesa is used for OpenGL
+          GALLIUM_DRIVER: llvmpipe
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action/windows@v2
