Added more render abstraction, Camera, Texture, Asset Manager

--- a/Pillar/CMakeLists.txt
+++ b/Pillar/CMakeLists.txt
@@ -13,16 +13,25 @@ add_library(Pillar SHARED
     src/Pillar/ImGuiLayer.cpp
     src/Pillar/Input.cpp
     src/Pillar/KeyCodes.h
+    # Utils
+    src/Pillar/Utils/AssetManager.cpp
     # Renderer
     src/Pillar/Renderer/RenderAPI.cpp
     src/Pillar/Renderer/Renderer.cpp
+    src/Pillar/Renderer/Renderer2D.cpp
+    src/Pillar/Renderer/RenderCommand.cpp
     src/Pillar/Renderer/Shader.cpp
     src/Pillar/Renderer/Buffer.cpp
+    src/Pillar/Renderer/VertexArray.cpp
+    src/Pillar/Renderer/Texture.cpp
+    src/Pillar/Renderer/OrthographicCamera.cpp
     # Platform - OpenGL
     src/Platform/OpenGL/OpenGLRenderAPI.cpp
     src/Platform/OpenGL/OpenGLContext.cpp
     src/Platform/OpenGL/OpenGLShader.cpp
     src/Platform/OpenGL/OpenGLBuffer.cpp
+    src/Platform/OpenGL/OpenGLVertexArray.cpp
+    src/Platform/OpenGL/OpenGLTexture.cpp
 )
 
 # Override for all configurations
@@ -46,6 +55,7 @@ set_target_properties(Pillar PROPERTIES
 # Include directories
 target_include_directories(Pillar PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/src
+    ${stb_SOURCE_DIR}
 )
 
 # Link libraries - add glm::glm
@@ -67,6 +77,7 @@ endif()
 
 # Define this so symbols are exported from DLL
 target_compile_definitions(Pillar PRIVATE PIL_EXPORT)
+target_compile_definitions(Pillar PRIVATE $<$<CONFIG:Debug>:PIL_ENABLE_ASSERTS>)
 
 # Copy Pillar DLL next to the Sandbox executable whenever Pillar is built
 add_custom_command(TARGET Pillar POST_BUILD
@@ -75,3 +86,12 @@ add_custom_command(TARGET Pillar POST_BUILD
         $<TARGET_FILE:Pillar>
         ${EXECUTABLE_OUTPUT_DIR}
 )
+
+
+
+
+
+
+
+
+
