converted to static linking and added o camera controller

--- a/Pillar/CMakeLists.txt
+++ b/Pillar/CMakeLists.txt
@@ -1,9 +1,9 @@
 # Added this line for clarity about file location
 # This is pillar cmake
 # ==============================
-# Pillar Engine (Shared Library - DLL)
+# Pillar Engine (Static Library)
 # ==============================
-add_library(Pillar SHARED
+add_library(Pillar STATIC
     src/Pillar/Application.cpp
     src/Pillar/Logger.cpp
     src/Pillar/Events/ApplicationEvent.cpp
@@ -25,6 +25,7 @@ add_library(Pillar SHARED
     src/Pillar/Renderer/VertexArray.cpp
     src/Pillar/Renderer/Texture.cpp
     src/Pillar/Renderer/OrthographicCamera.cpp
+    src/Pillar/Renderer/OrthographicCameraController.cpp
     # Platform - OpenGL
     src/Platform/OpenGL/OpenGLRenderAPI.cpp
     src/Platform/OpenGL/OpenGLContext.cpp
@@ -38,18 +39,13 @@ add_library(Pillar SHARED
 foreach(CONFIG Debug Release RelWithDebInfo MinSizeRel)
     string(TOUPPER ${CONFIG} CONFIG_UPPER)
     set_target_properties(Pillar PROPERTIES
-        RUNTIME_OUTPUT_DIRECTORY_${CONFIG_UPPER} ${LIBRARY_OUTPUT_DIR}
         ARCHIVE_OUTPUT_DIRECTORY_${CONFIG_UPPER} ${LIBRARY_OUTPUT_DIR}
-        LIBRARY_OUTPUT_DIRECTORY_${CONFIG_UPPER} ${LIBRARY_OUTPUT_DIR}
     )
 endforeach()
 
-
 # Set output directories
 set_target_properties(Pillar PROPERTIES
-    RUNTIME_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_DIR}
     ARCHIVE_OUTPUT_DIRECTORY ${LIBRARY_OUTPUT_DIR}
-    LIBRARY_OUTPUT_DIR ${LIBRARY_OUTPUT_DIR}
 )
 
 # Include directories
@@ -60,7 +56,7 @@ target_include_directories(Pillar PUBLIC
     ${stb_SOURCE_DIR}
 )
 
-# Link libraries - add glm::glm
+# Link libraries - all PUBLIC for static linking
 target_link_libraries(Pillar 
     PUBLIC 
         spdlog::spdlog
@@ -72,22 +68,14 @@ target_link_libraries(Pillar
 
 # For Windows, link additional system libraries that GLFW needs
 if(WIN32)
-    target_link_libraries(Pillar PRIVATE
+    target_link_libraries(Pillar PUBLIC
         opengl32
     )
 endif()
 
-# Define this so symbols are exported from DLL
-target_compile_definitions(Pillar PRIVATE PIL_EXPORT)
-target_compile_definitions(Pillar PRIVATE $<$<CONFIG:Debug>:PIL_ENABLE_ASSERTS>)
-
-# Copy Pillar DLL next to the Sandbox executable whenever Pillar is built
-add_custom_command(TARGET Pillar POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E make_directory ${EXECUTABLE_OUTPUT_DIR}
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
-        $<TARGET_FILE:Pillar>
-        ${EXECUTABLE_OUTPUT_DIR}
-)
+# No longer need PIL_EXPORT for static library
+# Remove DLL export definitions
+target_compile_definitions(Pillar PUBLIC PIL_STATIC_LIB)
 
 
 
