--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -26,6 +26,13 @@ add_executable(PillarTests
     src/InputTests.cpp
     src/ApplicationTests.cpp
     src/WindowTests.cpp
+    src/SceneTests.cpp
+    src/EntityTests.cpp
+    src/VelocityIntegrationTests.cpp
+    src/BulletCollisionTests.cpp
+    src/SpatialHashGridTests.cpp
+    src/XPCollectionTests.cpp
+
 )
 
 # Set output directory
