--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -32,7 +32,8 @@ add_executable(PillarTests
     src/BulletCollisionTests.cpp
     src/SpatialHashGridTests.cpp
     src/XPCollectionTests.cpp
-
+    src/AudioTests.cpp
+    src/AudioExtendedTests.cpp
 )
 
 # Set output directory
