--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,6 +56,7 @@ jobs:
         env:
           # Ensure Mesa is used for OpenGL
           GALLIUM_DRIVER: llvmpipe
+          ALSOFT_DRIVERS: null
 
       - name: Publish Test Results
         uses: EnricoMi/publish-unit-test-result-action/windows@v2
